--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@
 %test.quarkus.log.category."org.eaetirk".level=INFO
 %test.quarkus.hibernate-orm.database.generation=update
 
+#Prod Profile
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/lead_db
+%prod.quarkus.datasource.db-kind=postgresql
+%prod.quarkus.datasource.username=lead
+%prod.quarkus.datasource.password=leadpw
 
 #Commons for all profiles
 quarkus.hibernate-orm.database.generation=create
@@ -43,6 +48,5 @@ quarkus.log.console.color=true
 
 #HTTP Log
 quarkus.http.access-log.enabled=true
-
 quarkus.http.test-port=8082
 
