--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -3,15 +3,15 @@
 #
 # Before building the container image run:
 #
-# ./mvnw package -Dnative
+# ./mvnw package -Dnative -Dquarkus.native.container-build=true -Dquarkus.container-image.build=true
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/efd.task.lead .
+# docker build -f src/main/docker/Dockerfile.native -t iremaktas/efd.task.lead:1.0.0-SNAPSHOT .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/efd.task.lead
+# efd.task.lead % docker run -i --rm -p 8082:8082 iremaktas/efd.task.lead:1.0.0-SNAPSHOT
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
@@ -21,7 +21,7 @@ RUN chown 1001 /work \
     && chown 1001:root /work
 COPY --chown=1001:root target/*-runner /work/application
 
-EXPOSE 8080
+EXPOSE 8082
 USER 1001
 
 ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0"]
