--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@
 %dev.quarkus.log.console.json=false
 %dev.quarkus.log.console.json.pretty-print=true
 
+quarkus.oidc.auth-server-url=http://localhost:8543/realms/quarks
+
+# Tell Dev Services for Keycloak to import the realm file
+# This property is not effective when running the application in JVM or native modes
+quarkus.keycloak.devservices.realm-path=quarkus-realm.json
+
 #Test Profile
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:lead_DB;DB_CLOSE_DELAY=-1
 %test.quarkus.hibernate-orm.log.sql=true
@@ -45,4 +51,3 @@ quarkus.log.console.color=true
 quarkus.http.access-log.enabled=true
 
 quarkus.http.test-port=8082
-
