--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,15 @@
       <artifactId>quarkus-jdbc-h2</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-test-security-oidc</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
+    </dependency>
     <!-- End of Unit Test Related Dependencies-->
 
     <!-- Start of Logging Related Dependencies-->
